fix(auth): resolve {email} in groupsUrl through the configured emailClaim (#37195)
The {email} placeholder read only the literal "email" claim, while the
login path resolves the user's address through config.emailClaim and the
EMAIL_CLAIMS fallbacks. Tenants mapping email from upn/preferred_username
with no "email" claim (a common Entra shape) would have failed every
groups fetch — and by design a missing placeholder value aborts the
login. OAuthHelper now hands getGroups a claims copy with "email" set to
the address it actually resolved for the user; covered by a test.

Review cleanups in the same pass: hoist the HTTP fetch out of the JSON
parse try (no rethrow, no mislabeled transport errors); drop the fetcher's
urlEncode wrapper in favour of URLEncoder directly; modernize
toStringList (pattern match + Stream.toList); move validateUrlTemplate
below validateUrl so validateUrl's Javadoc is attached to it again.